data/derived/comb/progs/unify/prog4631.ml.out
Characters 12-13:
  let _=1.00+.5;;
              ^
Error: This expression has type int but an expression was expected of type
         float
